--- a/app/src/main/res/values-night/strings.xml
+++ b/app/src/main/res/values-night/strings.xml
@@ -7,11 +7,13 @@
     <string name="fullname">Fullname</string>
     <string name="email">Email</string>
     <string name="login_here">Already have an account? Login here</string>
-    <string name="signup">Create and account here</string>
+    <string name="signup">Create an account here</string>
     <string name="add_an_activity">Add an activity</string>
     <string name="details_of_your_activity">Details of your activity</string>
     <string name="activityName">Activity</string>
     <string name="how_many_hours">How many hours was you activity?</string>
     <string name="add_activity_button">Add activity</string>
     <string name="your_activities">Your Activities</string>
+    <string name="activity_hint">Activity</string>
+    <string name="hours_hint">How many hours was your activity?</string>
 </resources>
